# pseudo

./: .example.env  .travis.yml  Cargo.toml  appveyor.yml  nginx-sample.conf  readme.md  upstart-example.conf
assets/: header.tpl  index.tpl  link-bar.tpl  review-all.tpl  review-single.tpl  top-bar.tpl
migrations/20160502165021_create_submissions_table/: up.sql
src/: lib.rs  main.rs  models.rs  pseudoc.rs  server.rs
