[package]
name = "pseudo"
version = "0.1.0"
authors = ["Matt Ball <matt.ball.2@gmail.com>"]


[dependencies]
getopts = "0.2"
hyper = "0.9.1"
rust-crypto = "0.2.35"
rustc-serialize = "0.3.19"
url = "1.0.0"
nickel = "*"



[lib]
name = "pseudo"


[[bin]]
name = "pseudoc"
path = "src/pseudoc.rs"


[[bin]]
name = "pseudo_server"
path = "src/server.rs"
