[package]
name = "pseudo"
version = "0.1.0"
authors = ["Matt Ball <matt.ball.2@gmail.com>"]


[dependencies]
getopts = "*"
hyper = "*"
rust-crypto = "*"
rustc-serialize = "*"
url = "*"
nickel = "*"


[lib]
name = "pseudo"


[[bin]]
name = "pseudoc"
path = "src/pseudoc.rs"


[[bin]]
name = "pseudo_server"
path = "src/server.rs"
