[package]
name = "pseudo"
version = "0.1.0"
authors = ["Matt Ball <matt.ball.2@gmail.com>"]


[dependencies]
diesel = "0.6.1"
diesel_codegen = { version = "0.6.1", default-features = false, features = ["nightly", "postgres"] }
dotenv = "0.8.0"
dotenv_macros = "0.8.0"
getopts = "*"
hyper = "*"
nickel = { git = "https://github.com/nickel-org/nickel.rs" }
rand = "*"
rust-crypto = "*"
rustc-serialize = "*"
url = "*"
